--- a/api_doc.yaml
+++ b/api_doc.yaml
@@ -31,10 +31,12 @@ paths:
           description: "Game object that needs to be created"
           required: true
           schema:
-            $ref: "#/definitions/NewGame"
+            $ref: "#/definitions/Game"
       responses:
-        "404":
+        "400":
           description: "When there is an invalid param"
+        "404":
+          description: "When the game was not found"
     get:
       tags:
         - "games"
@@ -72,7 +74,34 @@ paths:
         "200":
           description: "successful operation"
           schema:
-            $ref: "#/definitions/GameResponse"
+            $ref: "#/definitions/Game"
+    put:
+      tags:
+        - "games"
+      summary: "Updates the given game"
+      description: ""
+      operationId: "updateGame"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ID of game to update"
+          required: true
+          type: "integer"
+        - in: "body"
+          name: "body"
+          description: "Game object that needs to be created"
+          required: true
+          schema:
+            $ref: "#/definitions/Game"
+      responses:
+        "400":
+          description: "When there is an invalid param"
+        "404":
+          description: "When the game was not found"
 definitions:
   NewGame:
     type: "object"
@@ -109,7 +138,6 @@ definitions:
           type: integer
           description: "Number of adjacent mines"
   Cell:
-    type: "object"
     additionalProperties:
       $ref: "#/definitions/CellColumn"
   IndexResponse:
@@ -119,7 +147,7 @@ definitions:
         id:
           type: "integer"
           description: "Game id"
-  GameResponse:
+  Game:
     type: "object"
     properties:
       height:
@@ -141,8 +169,75 @@ definitions:
         type: "string"
         description: "Ending result"
       cells:
-        description: "Cells data"
         $ref: "#/definitions/Cell"
-externalDocs:
-  description: "Find out more about Swagger"
-  url: "http://swagger.io"
+    example:
+      {
+        "height": 3,
+        "width": 3,
+        "mines_flagged": 1,
+        "uncovered_cells": 2,
+        "ended": true,
+        "result": "string",
+        "cells": {
+          "0": {
+            "0": {
+              "mine": true,
+              "flag": "red_flag",
+              "covered": true,
+              "adjacent_mines_count": 0
+            },
+            "1": {
+              "mine": false,
+              "flag":,
+              "covered": false,
+              "adjacent_mines_count": 2
+            },
+            "2": {
+              "mine": true,
+              "flag": "question_mark_flag",
+              "covered": true,
+              "adjacent_mines_count": 0
+            }
+          },
+          "1": {
+            "0": {
+              "mine": false,
+              "flag":,
+              "covered": false,
+              "adjacent_mines_count": 1
+            },
+            "1": {
+              "mine": false,
+              "flag":,
+              "covered": true,
+              "adjacent_mines_count": 2
+            },
+            "2": {
+              "mine": false,
+              "flag":,
+              "covered": true,
+              "adjacent_mines_count": 1
+            }
+          },
+          "2": {
+            "0": {
+              "mine": false,
+              "flag":,
+              "covered": true,
+              "adjacent_mines_count": 0
+            },
+            "1": {
+              "mine": false,
+              "flag":,
+              "covered": true,
+              "adjacent_mines_count": 0
+            },
+            "2": {
+              "mine": false,
+              "flag": "question_mark_flag",
+              "covered": true,
+              "adjacent_mines_count": 0
+            }
+          }
+        }
+      }
