--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,8 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: minesweeper_production
+  username: minesweeper
+  password: <%= ENV['MINESWEEPER_DATABASE_PASSWORD'] %>
